[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/UI/heath_bg.png" type="Texture" id=1]
[ext_resource path="res://Sprites/UI/heath_fill.png" type="Texture" id=2]
[ext_resource path="res://Interface/HealthBar.gd" type="Script" id=3]

[node name="HealthBar" type="Control"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthUnder" type="TextureProgress" parent="."]
margin_right = 396.0
margin_bottom = 53.0
value = 100.0
texture_under = ExtResource( 1 )
texture_progress = ExtResource( 2 )
tint_progress = Color( 0.968627, 0.0627451, 0.0627451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealthOver" type="TextureProgress" parent="."]
margin_right = 396.0
margin_bottom = 53.0
value = 100.0
texture_progress = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Update_Tween" type="Tween" parent="."]
